# musicbot

./: Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
src/: handler.rs  help.rs  helpers.rs  hook.rs  main.rs  standard_framerork_config.rs  voice_manager.rs
src/commands/: experimental.rs  mod.rs  system.rs  voice.rs
src/data/: data_container_key.rs  mod.rs
