[package]
name = "musicbot"
version = "0.1.0"
authors = ["MOZGIII <mike-n@narod.ru>"]
edition = "2018"

[dependencies]

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity.git"
rev = "745ae32b63603d4ee64c9b2393a447726b89350b"
features = ["cache", "framework", "standard_framework", "voice"]
